# autohttp

./: .gitignore  AGENTS.md  Makefile  README.md  go.mod  package-lock.json  package.json  pyrightconfig.json
.agents/: links.md
.agents/plans/: 2026-06-22-project-architecture.md
.agents/rules/: general.md
.agents/specs/: analysis.md  architecture.md  cli.md  contracts.md  data-flow.md  design.md  runtime.md  testing.md  trust.md
cmd/autohttp/: flags.go  main.go  record.go  record_test.go
internal/analyze/: analyze.go  analyze_test.go  dependency.go
internal/browsers/: interface.go
internal/camofox/: camofox.go
internal/challenge/: challenge.go
internal/generate/: generate.go  generate_test.go  template.go
internal/graph/: graph.go
internal/http/: standard.go  standard_test.go
internal/importer/: fixture.go  fixture.json  importer.go  importer_test.go
internal/index/: index.go  index_test.go
internal/inspect/: inspect.go
internal/normalize/: normalize.go
internal/record/: record.go  worker.go  worker_test.go
internal/tree/: node.go  tree.go  tree_test.go
internal/verify/: verify.go
python/autohttp_ai/: __init__.py  pyproject.toml  server.py
python/autohttp_ai/prompts/: __init__.py
python/autohttp_ai/providers/: __init__.py
python/autohttp_worker/: __init__.py  __main__.py  endpoint.py  pyproject.toml  server.py
python/autohttp_worker/adapters/: __init__.py  base.py  camoufox.py  cloakbrowser.py
python/autohttp_worker/tests/: conftest.py  test_endpoint.py
runtime/go/: go.mod  (+2 more)
session/: session.go  session_test.go
(+9 files in other folders)
