[project]
name = "autohttp-ai"
version = "0.1.0"
description = "Optional AI escalation worker for autohttp"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
    "protobuf>=4.25",
    "g4f>=0.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9",
    "ruff>=0.3",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
