[project]
name = "autohttp-worker"
version = "0.1.0"
description = "Per-recording Python browser worker for autohttp"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.62",
    "protobuf>=4.25",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.62",
    "mypy>=1.9",
    "ruff>=0.3",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
